test/extern/ferguson/c-array/c_array-anymanaged-and-generic.good
c_array-anymanaged-and-generic.chpl:5: error: c_array element type cannot be generic
A? may be generic due to generic management
