test/extern/ferguson/c-array/c_array-anymanaged-and-generic.chpl
use CTypes;

class A { type t; }

var a = new c_array(A?, 10);
